--- a/Homepage.html
+++ b/Homepage.html
@@ -1,3 +1,4 @@
+<!DOCTYPE.html>
 <html>
 <head>
 
@@ -7,8 +8,15 @@
 
 <h1> Moj website</h1>
 
-
-
+  <p>Zaglavlje</p>
+  
+  <p>Lijevi stupac</p>
+  <p> Sredina </p>
+  <p>Desni stupac</p>
+  <p>Podnožje</p>
+  
+  &copy; Dalibor Marković 
+  
 </body>
 
 
